--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@ $(document).ready(function(){initNavTree('index.html','');});
 <div class="contents">
     <div class="textblock">
         <p>
-            NTrace is a system for three dimensional data visualisation using the ray tracing algorithm.
-            This computationaly complex algorithm is accelerated on the parallel graphics hardware enabling interactive performance.
+            NTrace is a system for three dimensional data visualisation using the ray tracing algorithm. 
+            Its purpose is to enable developement and testing of highly parallel implementations of algorithms for data stracture build
+            and trace using the GPU hardware.
         </p>
     </div>
 </div><!-- contents -->
